--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta property="og:title" content="Snow" />
 		<meta property="og:image" content="" />
 		<meta property="og:type" content="website" />
-		<link rel="canonical" href="https://github.com/strongbunduq" />
+		<link rel="canonical" href="https://github.com/z.p0" />
 		<meta property="og:site_name" content="@strongbunduq" />
 		<meta
 			name="keywords"
@@ -206,7 +206,7 @@
 									<div class="column">
 										<a
 											class="platform"
-											href="https://github.com/strongbunduq"
+											href="https://github.com/z.p0"
 											rel="noreferrer noopener"
 											target="_blank">
 											<img
